fixed alignment of text fields and button in add user

--- a/src/components/AddUser/AddUserDetails/AddUserDetails.css
+++ b/src/components/AddUser/AddUserDetails/AddUserDetails.css
@@ -1,9 +1,1 @@
-.AddUser {
-  text-align: center;
-}
 
-.add-user {
-  padding: 2%;
-  align-items: center;
-  list-style: none;
-}
